# MyPhone

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  compose.yml  manage.py  pyproject.toml  pytest.ini
apps/core/: models.py  openapi.py  views.py
apps/core/lib/: with_history.py
apps/core/lib/models/: __init__.py  fields.py  manager.py  model.py
apps/core/lib/serializers/: __init__.py  serializers.py
apps/core/lib/views/: __init__.py  views.py
apps/core/management/commands/: createusers.py
apps/customer/: apps.py  models.py  services.py  views.py
apps/device/: models.py  serializers.py  services.py  utils.py  views.py
apps/device/management/commands/: dumpdevices.py  loaddevices.py
apps/order/: lib.py  models.py  views.py
myphone/: asgi.py  routes.py  urls.py  wsgi.py
myphone/settings/: base.py
resources/: openapi-schema.yml
resources/fixtures/: full.json  mini.json
resources/rawdata/: db.json  dump_items.csv  items.csv  others.json
scripts/: build.sh  data.sh  minidata.sh
templates/: documentation.html
tests/: smoke_test.py
tests/functional/: orders_test.py  pagination_test.py  products_test.py  relations_endpoints_test.py  search_test.py
tests/integration/: devicesdata_test.py  modelizing_test.py  payment_methods_test.py  safe_delete_test.py
